mejore y valide el formulario y estilos generales de la pagina

--- a/scss/media-query.scss
+++ b/scss/media-query.scss
@@ -4,7 +4,7 @@
 
 	* {
 
-		max-width: 767px;
+		
 
 		margin: 0;
 		padding: 0;
@@ -145,7 +145,7 @@ li {
 	font-style: lighter;
 	justify-self: center;
 	width: 100%;
-	text-align: center;
+	text-align: justify;
 	margin-left: 10px;
 
 	margin-bottom: 10px;
