--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@
   .contenedor .contenedor__header .header__logo {
     width: 250px; }
 
-.contenedor__header nav a {
+#menus {
   margin: 0px 20px 0px 20px;
   color: #192d50; }
 
@@ -376,6 +376,111 @@
   grid-area: contenedor__sidebar;
   align-self: flex-end;
   margin-top: 120px; }
+
+.formulario__label {
+  display: block;
+  font-weight: 700;
+  padding: 10px;
+  cursor: pointer; }
+
+.formulario__grupo-input {
+  position: relative; }
+
+.formulario__input {
+  width: 100%;
+  background: #fff;
+  border: 3px solid transparent;
+  border-radius: 3px;
+  height: 45px;
+  line-height: 45px;
+  padding: 0 40px 0 10px;
+  transition: .3s ease all; }
+
+.formulario__input:focus {
+  border: 3px solid #0075FF;
+  outline: none;
+  box-shadow: 3px 0px 30px rgba(163, 163, 163, 0.4); }
+
+.formulario__input-error {
+  font-size: 12px;
+  margin-bottom: 0;
+  display: none; }
+
+.formulario__input-error-activo {
+  display: block; }
+
+.formulario__validacion-estado {
+  position: absolute;
+  right: 10px;
+  bottom: 15px;
+  z-index: 100;
+  font-size: 16px;
+  opacity: 0; }
+
+.formulario__checkbox {
+  margin-right: 10px; }
+
+.formulario__grupo-terminos,
+.formulario__mensaje,
+.formulario__grupo-btn-enviar {
+  grid-column: span 2; }
+
+.formulario__mensaje {
+  height: 45px;
+  line-height: 45px;
+  background: #F66060;
+  padding: 0 15px;
+  border-radius: 3px;
+  display: none; }
+
+.formulario__mensaje-activo {
+  display: block; }
+
+.formulario__mensaje p {
+  margin: 0; }
+
+.formulario__grupo-btn-enviar {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.formulario__btn {
+  height: 45px;
+  line-height: 45px;
+  width: 30%;
+  background: #000;
+  color: #fff;
+  font-weight: bold;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: .1s ease all; }
+
+.formulario__btn:hover {
+  box-shadow: 3px 0px 30px #a3a3a3; }
+
+.formulario__mensaje-exito {
+  font-size: 14px;
+  color: #119200;
+  display: none; }
+
+.formulario__mensaje-exito-activo {
+  display: block; }
+
+/* ----- -----  Estilos para Validacion ----- ----- */
+.formulario__grupo-correcto .formulario__validacion-estado {
+  color: #1ed12d;
+  opacity: 1; }
+
+.formulario__grupo-incorrecto .formulario__label {
+  color: #bb2929; }
+
+.formulario__grupo-incorrecto .formulario__validacion-estado {
+  color: #bb2929;
+  opacity: 1; }
+
+.formulario__grupo-incorrecto .formulario__input {
+  border: 3px solid #bb2929; }
 
 /* SALUD VISUAL */
 .contenido__bloqueSalud {
@@ -652,7 +757,6 @@ input .check {
 /*MEDIA QUERY*/
 @media only screen and (max-width: 767px) {
   * {
-    max-width: 767px;
     margin: 0;
     padding: 0; }
   .contenedor {
@@ -713,7 +817,7 @@ input .check {
         font-style: lighter;
         justify-self: center;
         width: 100%;
-        text-align: center;
+        text-align: justify;
         margin-left: 10px;
         margin-bottom: 10px; }
   .botonDatos {
