--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -1,3 +1,10 @@
+#mensaje {
+
+	height: 10em;
+	text-decoration-line: none;
+	line-height: 25px;
+}
+
 .ayudaCon1 {
 
 	
@@ -74,7 +81,7 @@ grid-area: contenedor__sidebar;
 	grid-area: contenedor__contenido;
 	align-self: flex-end;
 	margin-bottom: 0px;
-	margin-top: 200px;
+	margin-top: 100px;
 	
 
 
